fix(?) thumbs vert align bug

--- a/wp-content/themes/skm/style.css
+++ b/wp-content/themes/skm/style.css
@@ -227,27 +227,32 @@ html {overflow-y: scroll;}
     vertical-align: middle;
     padding:30px;
     height:300px;
+    vertical-align: middle;
 }
+.grid-item a:before{
+    /*VERT ALIGN IMG */
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
 .grid-item a{
-    /* VERT ALIGN IMG - prevent blur from using translateY in child element*/
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+    vertical-align:middle;
 }
+
 .grid-item img,
 .grid-item--width2 img {
     margin:auto;
     max-width:80%;
     height:auto;
     max-height:80%;
-    /*VERT ALIGN IMG */
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    vertical-align: middle;
     /*    -webkit-box-shadow: -2px 2px 3px -1px rgba(0,0,0,0.2);
     -moz-box-shadow: -2px 2px 3px -1px rgba(0,0,0,0.2);
     box-shadow: -2px 2px 3px -1px rgba(0,0,0,0.2);*/
 }
+
 .grid-item--width2 {
     /*see media queries*/
     width: 600px;
